objects/IDMS_GDPRImplementation__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyURL__c</fullName>
        <label>Privacy URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_URL__c</fullName>
        <label>Terms and Conditions URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>IDMS_GDPRImplementation</label>
    <pluralLabel>IDMS_GDPRImplementation</pluralLabel>
</CustomObject>